--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
   "description": "A cosmetic brand website for skincare and makeup products",
   "main": "index.js",
   "scripts": {
-    "watch:sass": "node-sass sass/main.scss css/style.css -w",
+    "watch:sass": "sass --watch sass/main.scss:css/style.css --style compressed",
     "devserver": "live-server --browser=firefox",
     "start": "npm-run-all --parallel devserver watch:sass",
-    "compile:sass": "node-sass sass/main.scss css/style.comp.css",
+    "compile:sass": "sass sass/main.scss css/style.comp.css",
     "prefix:css": "postcss --use autoprefixer -b 'last 10 versions' css/style.comp.css -o css/style.prefix.css",
-    "compress:css": "node-sass css/style.prefix.css css/style.css --output-style compressed",
+    "compress:css": "sass css/style.prefix.css css/style.css --style compressed",
     "build:css": "npm-run-all compile:sass prefix:css compress:css"
   },
   "repository": {
@@ -25,8 +25,11 @@
   "devDependencies": {
     "autoprefixer": "^10.4.2",
     "concat": "^1.0.3",
-    "node-sass": "^7.0.1",
     "npm-run-all": "^4.1.5",
     "postcss-cli": "^9.1.0"
+  },
+  "dependencies": {
+    "live-server": "^1.2.2",
+    "sass": "^1.54.9"
   }
 }
